Finished first draft of the new results section.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -24,6 +24,7 @@ To address these limitations in literature produced by industry, we leveraged gr
 This allowed us to extract the valuable technical insights from the hype and technical misunderstanding that permeates this body of work.
 Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, this work answers the four questions commonly asked in relation to Blockchain technology.
 
+While the individual results of this work might not be surprising, taken together they represent the most complete overview of Blockchain technology and its use cases available in the academic literature.
 More concretely, our key contributions are,
 
 \begin{enumerate}
@@ -35,8 +36,17 @@ More concretely, our key contributions are,
 	We also discuss other related technical properties that enabled Blockchain's various capabilities.
 	
 	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
+	Our results demonstrate that Blockchain provides several important capabilities for use in building various applications.
+	First, Blockchain systems inherently track their full-system provenance, and this provenance data allows for the system to be easily audited by miners and outside parties.
+	Additionally, this provenance data is also useful in tracking assets monitored or managed by the Blockchain system (e.g., supply chain management, cryptocurrencies).
+	Second, Blockchain technology provides access control for the assets it monitors or manages and can allow operations on these assets to be anonymous.
+	Third, the provenance information and replication of that information among all miners provides significant resilience against accidental data loss or malicious modification of the data.
+	Fourth, Blockchain systems can embed executable programs that can automatically execute as appropriate and gain the benefits of Blockchain technology's other capabilities.
 		
-	\item \textbf{Describe how Blockchain technology fits in relation to other distributed systems.}
+	\item \textbf{Describe how Blockchain technology fits in relation to other distributed databases.}
+	We provide a taxonomy and flow chart that describes how Blockchain technology relates to other distributed databases.
+	This taxonomy demonstrates that Blockchain technology is the most complex of the related distributed databases.
+	As such, we recommend that applications leverage Blockchain technology only if they need the shared governance, provenance, auditability and resilience provided by Blockchain technology.
 	
 	\item \textbf{Identify the applications that could benefit from the use of Blockchain technology.}
 	
